--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -348,7 +348,7 @@ header nav .nav-sections .nav-fragment-section-content p:not(.button-container, 
 header nav .nav-sections .nav-fragment-section-content p:not(.button-container) a {
   color: #353535;
   text-decoration: none;
-  font-size: 15px;
+  font-size: var(--body-font-size-xs);
   line-height: 1.3;
   margin-left: 8px;
 }
@@ -699,7 +699,7 @@ header nav .nav-sections.tab-view-active .nav-fragment-section-content p.button-
   padding-left: 40px;
   padding-right: 20px;
   border-bottom: none;
-  font-size: var(--body-font-size-s);
+  font-size: var(--body-font-size-xs);
   font-weight: 400;
 }
 
@@ -708,7 +708,7 @@ header nav .nav-sections.tab-view-active .nav-fragment-section-content p.button-
 }
 
 header nav .nav-sections.tab-view-active .nav-fragment-section-content p.button-container a {
-  font-size: var(--body-font-size-s);
+  font-size: var(--body-font-size-xs);
   font-weight: 400;
 }
 
@@ -939,8 +939,9 @@ header nav .nav-sections .icon-privilage-img3a {
 }
 
 /* Vertically center link text next to icons */
-header nav .nav-sections .nav-h4-section-content p > a {
+header nav .nav-sections .default-content-wrapper>ul>li .nav-h4-section-content p > a {
   vertical-align: middle;
+  font-weight: 400; /* Override the 600 from general p a rule */
 }
 
 /* cs-dropdown is not in the header wrapper */
