--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1546,6 +1546,7 @@
   flex-direction: column;
   align-items: stretch;
   gap: 0;
+  border-radius: 8px;
   background: 
     radial-gradient(231% 135.8% at 0.9% 2.98%, rgb(255 255 255 / 40%) 0%, rgb(255 255 255 / 0%) 100%),
     linear-gradient(180deg, #2C2C2C 0%, #1A1A1A 100%);
